--- a/Chatroom/src/main/java/ClientSide/client/login/Page1.fxml
+++ b/Chatroom/src/main/java/ClientSide/client/login/Page1.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="402.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-1.0" maxWidth="-1.0" opacity="0.96" prefHeight="402.0" prefWidth="628.0" style="-fx-background-image: url(&quot;meow_background.jpg&quot;);" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label alignment="CENTER" layoutX="89.0" layoutY="65.0" prefHeight="35.0" prefWidth="488.0" style="&#10;" text="Welcome to Central Perk Chatroom!" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
          <font>
