--- a/Chatroom/src/main/java/ClientSide/client/login/PageCreateUser.fxml
+++ b/Chatroom/src/main/java/ClientSide/client/login/PageCreateUser.fxml
@@ -1,35 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.stage.*?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientSide.client.login.PageCreateUser">
-   <children>
-      <Label layoutX="127.0" layoutY="122.0" prefHeight="44.0" prefWidth="107.0" text="USERNAME">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label layoutX="127.0" layoutY="180.0" prefHeight="44.0" prefWidth="107.0" text="PASSWORD">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label layoutX="59.0" layoutY="65.0" prefHeight="44.0" prefWidth="174.0" text="Please create your :">
-         <font>
-            <Font name="System Italic" size="17.0" />
-         </font>
-      </Label>
-      <Button layoutX="216.0" layoutY="261.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="205.0" text="Sign Up">
-         <font>
-            <Font name="Gill Sans Ultra Bold" size="23.0" />
-         </font>
-      </Button>
-      <TextField layoutX="261.0" layoutY="123.0" prefHeight="44.0" prefWidth="227.0" />
-      <TextField layoutX="261.0" layoutY="180.0" prefHeight="44.0" prefWidth="227.0" />
-   </children>
-</AnchorPane>
+<Stage xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientSide.client.login.PageCreateUser">
+   <scene>
+      <Scene>
+         <root>
+            <AnchorPane prefHeight="400.0" prefWidth="600.0">
+               <children>
+                  <Label layoutX="127.0" layoutY="122.0" prefHeight="44.0" prefWidth="107.0" text="USERNAME">
+                     <font>
+                        <Font size="17.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="127.0" layoutY="180.0" prefHeight="44.0" prefWidth="107.0" text="PASSWORD">
+                     <font>
+                        <Font size="17.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="59.0" layoutY="65.0" prefHeight="44.0" prefWidth="174.0" text="Please create your :">
+                     <font>
+                        <Font name="System Italic" size="17.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="216.0" layoutY="261.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="205.0" text="Sign Up">
+                     <font>
+                        <Font name="Gill Sans Ultra Bold" size="23.0" />
+                     </font>
+                  </Button>
+                  <TextField layoutX="261.0" layoutY="123.0" prefHeight="44.0" prefWidth="227.0" />
+                  <TextField layoutX="261.0" layoutY="180.0" prefHeight="44.0" prefWidth="227.0" />
+               </children>
+            </AnchorPane>
+         </root>
+      </Scene>
+   </scene>
+</Stage>
