--- a/Chatroom/src/main/java/ClientSide/client/login/Page1.fxml
+++ b/Chatroom/src/main/java/ClientSide/client/login/Page1.fxml
@@ -7,7 +7,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.stage.Stage?>
 
-
+<!--在哪里找这个fxml文件的controller
+这是一个两边都需要定义的双向奔赴？
+-->
+<!--如果想要在.java 里面使用组件，需要加id-->
 <fx:root fx:id="primaryStage" type="Stage" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientSide.client.login.Page1">
    <scene>
       <Scene fx:id="scene1">
@@ -19,12 +22,12 @@
                         <Font size="27.0" />
                      </font>
                   </Label>
-                  <Button fx:id="login" layoutX="239.0" layoutY="120.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="178.0" text="Login">
+                  <Button fx:id="login" layoutX="239.0" layoutY="120.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="178.0" text="Login" onAction="#setLogin">
                      <font>
                         <Font name="Gill Sans Ultra Bold" size="23.0" />
                      </font>
                   </Button>
-                  <Button fx:id="signUp" layoutX="239.0" layoutY="219.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="178.0" text="Sign Up">
+                  <Button fx:id="signUp" layoutX="239.0" layoutY="219.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="178.0" text="Sign Up" onAction="#setSignUp">
                      <font>
                         <Font name="Gill Sans Ultra Bold" size="23.0" />
                      </font>
