--- a/Chatroom/src/main/java/ClientSide/client/login/Page2.fxml
+++ b/Chatroom/src/main/java/ClientSide/client/login/Page2.fxml
@@ -1,34 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.stage.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientSide.client.login.Page2">
-   <children>
-      <Label layoutX="117.0" layoutY="112.0" prefHeight="44.0" prefWidth="107.0" text="USERNAME">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label layoutX="117.0" layoutY="170.0" prefHeight="44.0" prefWidth="107.0" text="PASSWORD">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label layoutX="49.0" layoutY="55.0" prefHeight="44.0" prefWidth="174.0" text="Please enter your :">
-         <font>
-            <Font name="System Italic" size="17.0" />
-         </font>
-      </Label>
-      <Button layoutX="206.0" layoutY="251.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="205.0" text="Login">
-         <font>
-            <Font name="Gill Sans Ultra Bold" size="23.0" />
-         </font>
-      </Button>
-      <TextField layoutX="251.0" layoutY="113.0" prefHeight="44.0" prefWidth="227.0" />
-      <TextField layoutX="251.0" layoutY="170.0" prefHeight="44.0" prefWidth="227.0" />
-   </children>
-</AnchorPane>
+<Stage xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientSide.client.login.Page2">
+   <scene>
+      <Scene>
+         <root>
+            <AnchorPane prefHeight="400.0" prefWidth="600.0">
+               <children>
+                  <Label layoutX="117.0" layoutY="112.0" prefHeight="44.0" prefWidth="107.0" text="USERNAME">
+                     <font>
+                        <Font size="17.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="117.0" layoutY="170.0" prefHeight="44.0" prefWidth="107.0" text="PASSWORD">
+                     <font>
+                        <Font size="17.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="49.0" layoutY="55.0" prefHeight="44.0" prefWidth="174.0" text="Please enter your :">
+                     <font>
+                        <Font name="System Italic" size="17.0" />
+                     </font>
+                  </Label>
+                  <Button id="Login" layoutX="206.0" layoutY="251.0" mnemonicParsing="false" onAction="#loginUser" prefHeight="66.0" prefWidth="205.0" text="Login">
+                     <font>
+                        <Font name="Gill Sans Ultra Bold" size="23.0" />
+                     </font>
+                  </Button>
+                  <TextField id="username" layoutX="251.0" layoutY="113.0" prefHeight="44.0" prefWidth="227.0" onAction="#setUsername"/>
+                  <TextField id="password" layoutX="251.0" layoutY="170.0" prefHeight="44.0" prefWidth="227.0" onAction="#setPassword"/>
+               </children>
+            </AnchorPane>
+         </root>
+      </Scene>
+   </scene>
+</Stage>
