--- a/Client/src/main/resources/Chatbox.fxml
+++ b/Client/src/main/resources/Chatbox.fxml
@@ -4,14 +4,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="652.0" prefWidth="847.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientSide.chatwindow.LoggedInChatbox">
+<!--xmlns="http://javafx.com/javafx/19.0.2.1-ea"-->
+
+<AnchorPane prefHeight="652.0" prefWidth="847.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="ClientSide.chatwindow.LoggedInChatbox">
    <children>
       <ScrollPane fx:id="scrollPane" layoutX="198.0" layoutY="14.0" prefHeight="450.0" prefWidth="634.0">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
         </content>
       </ScrollPane>
-      <TextArea fx:id="messageToSend" layoutX="14.0" layoutY="464.0" onKeyPressed="#setOnKeyPressed" prefHeight="200.0" prefWidth="718.0" text="Enter a meassage..." />
+      <TextArea fx:id="messageToSend" layoutX="14.0" layoutY="464.0" onKeyPressed="#setOnKeyPressed" onKeyTyped="#setMessage" prefHeight="200.0" prefWidth="718.0" />
       <Button layoutX="732.0" layoutY="514.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="102.0" text="emoji">
          <font>
             <Font name="Consolas" size="18.0" />
